--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.wcm.maven</groupId>
     <artifactId>io.wcm.maven.aem-global-parent</artifactId>
-    <version>1.1.5-SNAPSHOT</version>
+    <version>1.1.6</version>
     <relativePath/>
   </parent>
 
@@ -23,7 +23,7 @@
       <dependency>
         <groupId>io.wcm.devops.conga.definitions</groupId>
         <artifactId>io.wcm.devops.conga.definitions.aem</artifactId>
-        <version>0.7.1-SNAPSHOT</version>
+        <version>0.8.0</version>
       </dependency>
 
     </dependencies>
