fix typo and remove obsolete parameter

--- a/definition/src/main/roles/wcm-io-samples-cms.yaml
+++ b/definition/src/main/roles/wcm-io-samples-cms.yaml
@@ -60,8 +60,7 @@ config:
 
   # Log levels
   log:
-    logPath: "logs"
-    projectSpecifcLogLevel: warn
+    projectSpecificLogLevel: warn
 
 
   # Example for config override configuration
