--- a/definition/pom.xml
+++ b/definition/pom.xml
@@ -18,7 +18,7 @@
 
   <properties>
     <config.environment>development</config.environment>
-    <wcm-io-samples-version>1.0.0</wcm-io-samples-version>
+    <wcm-io-samples-version>1.1.0-SNAPSHOT</wcm-io-samples-version>
   </properties>
 
   <dependencies>
