--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
   
   <parent>
     <groupId>io.wcm.maven</groupId>
-    <artifactId>io.wcm.maven.global-parent</artifactId>
-    <version>13</version>
+    <artifactId>io.wcm.maven.aem-global-parent</artifactId>
+    <version>1.1.8</version>
     <relativePath/>
   </parent>
 
