--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -23,7 +23,7 @@
       <dependency>
         <groupId>io.wcm.devops.conga.definitions</groupId>
         <artifactId>io.wcm.devops.conga.definitions.aem</artifactId>
-        <version>0.8.1-SNAPSHOT</version>
+        <version>0.9.0</version>
       </dependency>
 
     </dependencies>
