--- a/definition/src/main/dev-environments/development.yaml
+++ b/definition/src/main/dev-environments/development.yaml
@@ -13,7 +13,7 @@ nodes:
     variant: aem-publish
 
 config:
-  contentPackage.group: "wcm-io-samples"
+  contentPackage.group: wcm-io-samples
   app.sampleContent: true
 
   # Log levels
