--- a/definition/src/main/roles/wcm-io-samples-cms.yaml
+++ b/definition/src/main/roles/wcm-io-samples-cms.yaml
@@ -56,7 +56,7 @@ files:
 config:
   contentPackage:
     group: wcm-io-samples
-    version: "${version}"
+    version: ${version}
 
   app:
     sampleContent: false
