cosmetic: change execution id to better name

--- a/environment/pom.xml
+++ b/environment/pom.xml
@@ -39,7 +39,7 @@
 
           <!-- Generate configuration without ZIP file -->
           <execution>
-            <id>lauchpad-configuration-generate</id>
+            <id>dev-environment-config</id>
             <phase>generate-resources</phase>
             <goals>
               <goal>generate</goal>
