--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.wcm.maven</groupId>
     <artifactId>io.wcm.maven.aem-global-parent</artifactId>
-    <version>1.2.28</version>
+    <version>1.2.34</version>
     <relativePath/>
   </parent>
 
@@ -16,6 +16,14 @@
   <version>1-SNAPSHOT</version>
 
   <name>CONGA Training: AEM Parent</name>
+  
+  <properties>
+
+    <!-- Java version -->
+    <java.version>1.8</java.version>
+    <build.compiler.release>8</build.compiler.release>
+
+  </properties>
   
   <dependencyManagement>
     <dependencies>
