switch wcm.io domains to HTTPS

--- a/definition/src/main/roles/wcm-io-samples-cms.yaml
+++ b/definition/src/main/roles/wcm-io-samples-cms.yaml
@@ -1,6 +1,6 @@
 # Project-specific AEM configuration
 
-# Inherit default AEM functionality from "AEM Definitions", see http://devops.wcm.io/conga/definitions/aem/
+# Inherit default AEM functionality from "AEM Definitions", see https://devops.wcm.io/conga/definitions/aem/
 inherits:
 - role: aem-cms
 
